--- a/func.require.html
+++ b/func.require.html
@@ -6,9 +6,7 @@ and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization 
 member function of a class <span class='texttt'>T</span>
 and <span class='texttt'>t1</span> does not satisfy the previous two items;</p></li><li id='1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.4'>(1.4)</a></div><p ><span class='texttt'>t1.*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
-and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;
-    
-</p></li><li id='1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
+and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;</p></li><li id='1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
 and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization of <span class='texttt'>reference_wrapper</span>;</p></li><li id='1.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.6'>(1.6)</a></div><p ><span class='texttt'>(*t1).*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
