--- a/mem.poly.allocator.class.html
+++ b/mem.poly.allocator.class.html
@@ -118,7 +118,7 @@ and <span class='texttt'>p-&gt;second</span> using the elements of <span class='
 </p><ul class='itemize'><li id='mem.poly.allocator.mem-9.1'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.1'>(9.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T1,memory_resource*&gt;</span> is <span class='texttt'>false</span>
 <br/>
 and
-<span class='texttt'>is_constructible_v&lt;T,Args1...&gt;</span> is <span class='texttt'>true</span>,
+<span class='texttt'>is_constructible_v&lt;T1,Args1...&gt;</span> is <span class='texttt'>true</span>,
 <br/>
 then <span class='texttt'>xprime</span> is <span class='texttt'>x</span>.
 </p></li><li id='mem.poly.allocator.mem-9.2'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.2'>(9.2)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T1,memory_resource*&gt;</span> is <span class='texttt'>true</span>
@@ -139,7 +139,7 @@ according to the appropriate rule from the following list:
 </p><ul class='itemize'><li id='mem.poly.allocator.mem-9.5'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.5'>(9.5)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T2,memory_resource*&gt;</span> is <span class='texttt'>false</span>
 <br/>
 and
-<span class='texttt'>is_constructible_v&lt;T,Args2...&gt;</span> is <span class='texttt'>true</span>,
+<span class='texttt'>is_constructible_v&lt;T2,Args2...&gt;</span> is <span class='texttt'>true</span>,
 <br/>
 then <span class='texttt'>yprime</span> is <span class='texttt'>y</span>.
 </p></li><li id='mem.poly.allocator.mem-9.6'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.6'>(9.6)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2,memory_resource*&gt;</span> is <span class='texttt'>true</span>
