--- a/tab.html
+++ b/tab.html
@@ -2229,11 +2229,11 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
   <i>Effects:</i> Same as above, but uses <span class='texttt'>Compare()</span> as a comparison object.  </td><td class='left'>
   same as above                      </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(il)</span>            </td><td class='left'>
                           </td><td class='left'>
-  Same as <span class='texttt'>X(il.begin(), il.end())</span>.  </td><td class='left'>
-  Same as <span class='texttt'>X(il.begin(), il.end())</span>.  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(il,c)</span>          </td><td class='left'>
+  same as <span class='texttt'>X(il.begin(), il.end())</span>  </td><td class='left'>
+  same as <span class='texttt'>X(il.begin(), il.end())</span>  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(il,c)</span>          </td><td class='left'>
                           </td><td class='left'>
-  Same as <span class='texttt'>X(il.begin(), il.end(), c)</span>.  </td><td class='left'>
-  Same as <span class='texttt'>X(il.begin(), il.end(), c)</span>.  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a = il</span>     </td><td class='left'>
+  same as <span class='texttt'>X(il.begin(), il.end(), c)</span>  </td><td class='left'>
+  same as <span class='texttt'>X(il.begin(), il.end(), c)</span>  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a = il</span>     </td><td class='left'>
   <span class='texttt'>X&amp;</span>               </td><td class='left'>
   <i>Requires:</i> <span class='texttt'>value_type</span> is
   <span class='texttt'>CopyInsertable</span> into <span class='texttt'>X</span>
@@ -2318,7 +2318,7 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
   with unique keys; always inserts that element in containers with equivalent keys.  </td><td class='left'>
   <span class='math'><span class='mathalpha'>N</span><span class="mathrm">log</span> (<span class='texttt'>a.size()</span> + <span class='mathalpha'>N</span>)</span>, where <span class='math'><span class='mathalpha'>N</span></span> has the value <span class='texttt'>distance(i, j)</span> </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.insert(il)</span>           </td><td class='left'>
   <span class='texttt'>void</span>                  </td><td class='left'>
-  Equivalent to <span class='texttt'>a.insert(il.begin(), il.end())</span>. </td><td class='left'>
+  equivalent to <span class='texttt'>a.insert(il.begin(), il.end())</span> </td><td class='left'>
                                           </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a_uniq.</span><br/>
  <span class='texttt'>insert(nh)</span>           </td><td class='left'>
  <span class='texttt'>insert_return_type</span>   </td><td class='left'>
@@ -2360,12 +2360,12 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
  logarithmic in general, but amortized constant if the element is inserted right
  before <span class='texttt'>p</span>.                             </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.extract(k)</span>              </td><td class='left'>
  <span class='texttt'>node_type</span>             </td><td class='left'>
- Removes the first element in the container with key equivalent to <span class='texttt'>k</span>.
+ removes the first element in the container with key equivalent to <span class='texttt'>k</span>.
  Returns a <span class='texttt'>node_type</span> owning the element if found, otherwise an empty
  <span class='texttt'>node_type</span>. </td><td class='left'>
  <span class='math'><span class="mathrm">log</span> (<span class='texttt'>a.size()</span>)</span>       </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.extract(q)</span>              </td><td class='left'>
  <span class='texttt'>node_type</span>             </td><td class='left'>
- Removes the element pointed to by <span class='texttt'>q</span>.
+ removes the element pointed to by <span class='texttt'>q</span>.
  Returns a <span class='texttt'>node_type</span> owning that element. </td><td class='left'>
  amortized constant       </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.merge(a2)</span>              </td><td class='left'>
  <span class='texttt'>void</span>             </td><td class='left'>
