--- a/utilities.html
+++ b/utilities.html
@@ -46,7 +46,7 @@ namespace std {
     T exchange(T&amp; obj, U&amp;&amp; new_val);
 
   <span class='comment'>// <a href='forward'>[forward]</a>, forward/move
-</span>  template &lt;class T&gt; 
+</span>  template &lt;class T&gt;
     constexpr T&amp;&amp; forward(remove_reference_t&lt;T&gt;&amp; t) noexcept;
   template &lt;class T&gt;
     constexpr T&amp;&amp; forward(remove_reference_t&lt;T&gt;&amp;&amp; t) noexcept;
@@ -1269,7 +1269,7 @@ template &lt;size_t I, class... Types&gt;
   constexpr const tuple_element_t&lt;I, tuple&lt;Types...&gt;&gt;&amp;
     get(const tuple&lt;Types...&gt;&amp; t) noexcept;   <span class='comment'>// Note B
 </span>template &lt;size_t I, class... Types&gt;
-  constexpr const tuple_element_t&lt;I, tuple&lt;Types...&gt;&gt;&amp;&amp; get(const tuple&lt;Types...&gt;&amp;&amp; t) noexcept; 
+  constexpr const tuple_element_t&lt;I, tuple&lt;Types...&gt;&gt;&amp;&amp; get(const tuple&lt;Types...&gt;&amp;&amp; t) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='tuple.elem-1'><div class='marginalizedparent'><a class='marginalized' href='#tuple.elem-1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>I &lt; sizeof...(Types)</span>.
 The program is ill-formed if <span class='texttt'>I</span> is out of bounds.</p></div></div><div class='para' id='tuple.elem-2'><div class='marginalizedparent'><a class='marginalized' href='#tuple.elem-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>  A reference to the <span class='texttt'>I</span>th element of <span class='texttt'>t</span>, where
 indexing is zero-based.</p></div></div><div class='para' id='tuple.elem-3'><div class='marginalizedparent'><a class='marginalized' href='#tuple.elem-3'>3</a></div><div class='itemdescr'><p >[&nbsp;<i>Note A:</i>
@@ -2885,7 +2885,7 @@ namespace std {
     T any_cast(any&amp; operand);
   template&lt;class T&gt;
     T any_cast(any&amp;&amp; operand);
-  
+
   template&lt;class T&gt;
     const T* any_cast(const any* operand) noexcept;
   template&lt;class T&gt;
@@ -5430,7 +5430,7 @@ namespace std {
     template&lt;class Y&gt; weak_ptr&amp; operator=(const weak_ptr&lt;Y&gt;&amp; r) noexcept;
     template&lt;class Y&gt; weak_ptr&amp; operator=(const shared_ptr&lt;Y&gt;&amp; r) noexcept;
     weak_ptr&amp; operator=(weak_ptr&amp;&amp; r) noexcept;
-    template&lt;class Y&gt; weak_ptr&amp; operator=(weak_ptr&lt;Y&gt;&amp;&amp; r) noexcept;    
+    template&lt;class Y&gt; weak_ptr&amp; operator=(weak_ptr&lt;Y&gt;&amp;&amp; r) noexcept;
 
     <span class='comment'>// <a href='util.smartptr.weak.mod'>[util.smartptr.weak.mod]</a>, modifiers
 </span>    void swap(weak_ptr&amp; r) noexcept;
@@ -5879,7 +5879,7 @@ and <span class='texttt'>p-&gt;second</span> using the elements of <span class='
 </p><ul class='itemize'><li id='mem.poly.allocator.mem-9.1'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.1'>(9.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T1,memory_resource*&gt;</span> is <span class='texttt'>false</span>
 <br/>
 and
-<span class='texttt'>is_constructible_v&lt;T,Args1...&gt;</span> is <span class='texttt'>true</span>,
+<span class='texttt'>is_constructible_v&lt;T1,Args1...&gt;</span> is <span class='texttt'>true</span>,
 <br/>
 then <span class='texttt'>xprime</span> is <span class='texttt'>x</span>.
 </p></li><li id='mem.poly.allocator.mem-9.2'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.2'>(9.2)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T1,memory_resource*&gt;</span> is <span class='texttt'>true</span>
@@ -5900,7 +5900,7 @@ according to the appropriate rule from the following list:
 </p><ul class='itemize'><li id='mem.poly.allocator.mem-9.5'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.5'>(9.5)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T2,memory_resource*&gt;</span> is <span class='texttt'>false</span>
 <br/>
 and
-<span class='texttt'>is_constructible_v&lt;T,Args2...&gt;</span> is <span class='texttt'>true</span>,
+<span class='texttt'>is_constructible_v&lt;T2,Args2...&gt;</span> is <span class='texttt'>true</span>,
 <br/>
 then <span class='texttt'>yprime</span> is <span class='texttt'>y</span>.
 </p></li><li id='mem.poly.allocator.mem-9.6'><div class='marginalizedparent' style='left:-10em'><a class='marginalized' href='#mem.poly.allocator.mem-9.6'>(9.6)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2,memory_resource*&gt;</span> is <span class='texttt'>true</span>
@@ -6826,7 +6826,7 @@ namespace std {
   struct default_order;
 
   template &lt;class T = void&gt;
-  using default_order_t = typename default_order&lt;T&gt;::type; 
+  using default_order_t = typename default_order&lt;T&gt;::type;
 
   <span class='comment'>// <a href='func.bind'>[func.bind]</a>, function object binders
 </span>  template &lt;class T&gt; constexpr bool is_bind_expression_v
@@ -6852,9 +6852,7 @@ and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization 
 member function of a class <span class='texttt'>T</span>
 and <span class='texttt'>t1</span> does not satisfy the previous two items;</p></li><li id='func.require-1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.4'>(1.4)</a></div><p ><span class='texttt'>t1.*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
-and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;
-    
-</p></li><li id='func.require-1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
+and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;</p></li><li id='func.require-1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
 and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization of <span class='texttt'>reference_wrapper</span>;</p></li><li id='func.require-1.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.6'>(1.6)</a></div><p ><span class='texttt'>(*t1).*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
@@ -8095,7 +8093,7 @@ namespace std {
   template &lt;class, class R = void&gt; struct is_callable; <span class='comment'>// not defined
 </span>  template &lt;class Fn, class... ArgTypes, class R&gt;
     struct is_callable&lt;Fn(ArgTypes...), R&gt;;
-     
+
   template &lt;class, class R = void&gt; struct is_nothrow_callable; <span class='comment'>// not defined
 </span>  template &lt;class Fn, class... ArgTypes, class R&gt;
     struct is_nothrow_callable&lt;Fn(ArgTypes...), R&gt;;
@@ -8163,7 +8161,7 @@ namespace std {
   <span class='comment'>// <a href='meta.trans.other'>[meta.trans.other]</a>, other transformations
 </span>  template &lt;size_t Len,
             size_t Align = <i>default-alignment</i>&gt; <span class='comment'>// see <a href='meta.trans.other'>[meta.trans.other]</a>
-</span>    struct aligned_storage;      
+</span>    struct aligned_storage;
   template &lt;size_t Len, class... Types&gt; struct aligned_union;
   template &lt;class T&gt; struct decay;
   template &lt;bool, class T = void&gt; struct enable_if;
@@ -8189,7 +8187,7 @@ namespace std {
   template &lt;class T&gt;
     using underlying_type_t = typename underlying_type&lt;T&gt;::type;
   template &lt;class T&gt;
-    using result_of_t       = typename result_of&lt;T&gt;::type;  
+    using result_of_t       = typename result_of&lt;T&gt;::type;
   template &lt;class...&gt;
     using void_t            = void;
 
