--- a/function.objects.html
+++ b/function.objects.html
@@ -152,7 +152,7 @@ namespace std {
   struct default_order;
 
   template &lt;class T = void&gt;
-  using default_order_t = typename default_order&lt;T&gt;::type; 
+  using default_order_t = typename default_order&lt;T&gt;::type;
 
   <span class='comment'>// <a href='func.bind'>[func.bind]</a>, function object binders
 </span>  template &lt;class T&gt; constexpr bool is_bind_expression_v
@@ -178,9 +178,7 @@ and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization 
 member function of a class <span class='texttt'>T</span>
 and <span class='texttt'>t1</span> does not satisfy the previous two items;</p></li><li id='func.require-1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.4'>(1.4)</a></div><p ><span class='texttt'>t1.*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
-and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;
-    
-</p></li><li id='func.require-1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
+and <span class='texttt'>is_base_of_v&lt;T, decay_t&lt;decltype(t1)&gt;&gt;</span> is <span class='texttt'>true</span>;</p></li><li id='func.require-1.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.5'>(1.5)</a></div><p ><span class='texttt'>t1.get().*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
 and <span class='texttt'>decay_t&lt;decltype(t1)&gt;</span> is a specialization of <span class='texttt'>reference_wrapper</span>;</p></li><li id='func.require-1.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#func.require-1.6'>(1.6)</a></div><p ><span class='texttt'>(*t1).*f</span> when <span class='texttt'>N == 1</span> and <span class='texttt'>f</span> is a pointer to
 data member of a class <span class='texttt'>T</span>
