--- a/associative.reqmts.html
+++ b/associative.reqmts.html
@@ -240,7 +240,7 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
   <span class='texttt'>i, j)</span>          </td><td class='left'>
   <span class='texttt'>void</span>                   </td><td class='left'>
   <i>Requires:</i> <span class='texttt'>value_type</span> shall be <span class='texttt'>EmplaceConstructible</span> into <span class='texttt'>X</span> from <span class='texttt'>*i</span>.<br/>
-  pre: <span class='texttt'>i</span>, <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.
+  <i>Requires:</i> <span class='texttt'>i</span>, <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.
   inserts each element from the range <span class='texttt'>[i, j)</span> if and only if there
   is no element with key equivalent to the key of that element in containers
   with unique keys; always inserts that element in containers with equivalent keys.  </td><td class='left'>
@@ -250,12 +250,12 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
                                           </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a_uniq.</span><br/>
  <span class='texttt'>insert(nh)</span>           </td><td class='left'>
  <span class='texttt'>insert_return_type</span>   </td><td class='left'>
- pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a_uniq.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect. Otherwise, inserts the
  element owned by <span class='texttt'>nh</span> if and only if there is no element in the
  container with a key equivalent to <span class='texttt'>nh.key()</span>.<br/>
- post: If <span class='texttt'>nh</span> is empty, <span class='texttt'>inserted</span> is <span class='texttt'>false</span>,
+ <i>Postconditions:</i> If <span class='texttt'>nh</span> is empty, <span class='texttt'>inserted</span> is <span class='texttt'>false</span>,
  <span class='texttt'>position</span> is <span class='texttt'>end()</span>, and <span class='texttt'>node</span> is empty.
  Otherwise if the insertion took place, <span class='texttt'>inserted</span> is <span class='texttt'>true</span>,
  <span class='texttt'>position</span> points to the inserted element, and <span class='texttt'>node</span> is empty;
@@ -265,17 +265,17 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
  logarithmic                             </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a_eq.</span><br/>
  <span class='texttt'>insert(nh)</span>           </td><td class='left'>
  <span class='texttt'>iterator</span>   </td><td class='left'>
- pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a_eq.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect and returns <span class='texttt'>a_eq.end()</span>.
  Otherwise, inserts the element owned by <span class='texttt'>nh</span> and returns an iterator
  pointing to the newly inserted element. If a range containing elements with
  keys equivalent to <span class='texttt'>nh.key()</span> exists in <span class='texttt'>a_eq</span>, the element is
  inserted at the end of that range.<br/>
- post: <span class='texttt'>nh</span> is empty. </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>nh</span> is empty. </td><td class='left'>
  logarithmic                             </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.insert(p, nh)</span>           </td><td class='left'>
  <span class='texttt'>iterator</span>   </td><td class='left'>
- pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect and returns <span class='texttt'>a.end()</span>.
  Otherwise, inserts the element owned by <span class='texttt'>nh</span> if and only if there
@@ -284,7 +284,7 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
  with equivalent keys. Always returns the iterator pointing to the element
  with key equivalent to <span class='texttt'>nh.key()</span>. The element is inserted as close
  as possible to the position just prior to <span class='texttt'>p</span>.<br/>
- post: <span class='texttt'>nh</span> is empty if insertion succeeds, unchanged if insertion fails.  </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>nh</span> is empty if insertion succeeds, unchanged if insertion fails.  </td><td class='left'>
  logarithmic in general, but amortized constant if the element is inserted right
  before <span class='texttt'>p</span>.                             </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.extract(k)</span>              </td><td class='left'>
  <span class='texttt'>node_type</span>             </td><td class='left'>
@@ -297,12 +297,12 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
  Returns a <span class='texttt'>node_type</span> owning that element. </td><td class='left'>
  amortized constant       </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.merge(a2)</span>              </td><td class='left'>
  <span class='texttt'>void</span>             </td><td class='left'>
- pre: <span class='texttt'>a.get_allocator() == a2.get_allocator()</span>.<br/>
+ <i>Requires:</i> <span class='texttt'>a.get_allocator() == a2.get_allocator()</span>.<br/>
  Attempts to extract each element in <span class='texttt'>a2</span> and insert it into <span class='texttt'>a</span>
  using the comparison object of <span class='texttt'>a</span>. In containers with unique keys,
  if there is an element in <span class='texttt'>a</span> with key equivalent to the key of an
  element from <span class='texttt'>a2</span>, then that element is not extracted from <span class='texttt'>a2</span>.<br/>
- post: Pointers and references to the transferred elements of <span class='texttt'>a2</span>
+ <i>Postconditions:</i> Pointers and references to the transferred elements of <span class='texttt'>a2</span>
  refer to those same elements but as members of <span class='texttt'>a</span>. Iterators referring
  to the transferred elements will continue to refer to their elements, but
  they now behave as iterators into <span class='texttt'>a</span>, not into <span class='texttt'>a2</span>.<br/>
@@ -330,7 +330,7 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
  <span class='math'><span class="mathrm">log</span>(<span class='texttt'>a.size()</span>) + <span class='mathalpha'>N</span></span>, where <span class='math'><span class='mathalpha'>N</span></span> has the value <span class='texttt'>distance(q1, q2)</span>.    </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.clear()</span>       </td><td class='left'>
  <span class='texttt'>void</span>           </td><td class='left'>
  <span class='texttt'>a.erase(a.begin(),a.end())</span><br/>
- post: <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>.  </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>.  </td><td class='left'>
  linear in <span class='texttt'>a.size()</span>.  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>b.find(k)</span>       </td><td class='left'>
  <span class='texttt'>iterator</span>; <span class='texttt'>const_iterator</span> for constant <span class='texttt'>b</span>.  </td><td class='left'>
  returns an iterator pointing to an element with the key equivalent
