--- a/container.requirements.general.html
+++ b/container.requirements.general.html
@@ -65,28 +65,28 @@ denotes a non-const rvalue of type <span class='texttt'>X</span>.</p><div class=
  compile time                </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X u;</span>                </td><td class='left'>
                             </td><td class='left'>
                             </td><td class='left'>
- post: <span class='texttt'>u.empty()</span>    </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>u.empty()</span>    </td><td class='left'>
  constant                   </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X()</span>                 </td><td class='left'>
                             </td><td class='left'>
                             </td><td class='left'>
- post: <span class='texttt'>X().empty()</span>  </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>X().empty()</span>  </td><td class='left'>
  constant                   </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(a)</span>                </td><td class='left'>
                             </td><td class='left'>
                             </td><td class='left'>
  <i>Requires:</i> <span class='texttt'>T</span> is <span class='texttt'>CopyInsertable</span>
- into <span class='texttt'>X</span> (see below).<br/> post: <span class='texttt'>a == X(a)</span>.         </td><td class='left'>
+ into <span class='texttt'>X</span> (see below).<br/> <i>Postconditions:</i> <span class='texttt'>a == X(a)</span>.         </td><td class='left'>
  linear                     </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X u(a);</span><br/>
 <span class='texttt'>X u = a;</span>            </td><td class='left'>
                             </td><td class='left'>
                             </td><td class='left'>
  <i>Requires:</i> <span class='texttt'>T</span> is <span class='texttt'>CopyInsertable</span>
  into <span class='texttt'>X</span> (see below).<br/>
- post: <span class='texttt'>u == a</span>       </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>u == a</span>       </td><td class='left'>
  linear                     </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X u(rv);</span><br/>
 <span class='texttt'>X u = rv;</span>            </td><td class='left'>
                             </td><td class='left'>
                             </td><td class='left'>
-  post: <span class='texttt'>u</span> shall be equal to the value that <span class='texttt'>rv</span> had before this construction
+  <i>Postconditions:</i> <span class='texttt'>u</span> shall be equal to the value that <span class='texttt'>rv</span> had before this construction
                             </td><td class='left'>
   (Note B)                  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a = rv</span>              </td><td class='left'>
   <span class='texttt'>X&amp;</span>               </td><td class='left'>
@@ -135,7 +135,7 @@ denotes a non-const rvalue of type <span class='texttt'>X</span>.</p><div class=
   (Note A)                  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>r = a</span>               </td><td class='left'>
  <span class='texttt'>X&amp;</span>                </td><td class='left'>
                             </td><td class='left'>
- post: <span class='texttt'>r == a</span>.      </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>r == a</span>.      </td><td class='left'>
  linear                     </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.size()</span>                </td><td class='left'>
  <span class='texttt'>size_type</span>             </td><td class='left'>
  <span class='texttt'>distance(a.begin(),</span>
@@ -298,7 +298,7 @@ Table <a href='#tab:containers.optional.operations'>[tab:containers.optional.ope
 <span class='texttt'>a &lt; b</span>                   </td><td class='left'>
  convertible to <span class='texttt'>bool</span>    </td><td class='left'>
  <span class='texttt'>lexicographical_compare( a.begin(), a.end(), b.begin(), b.end())</span> </td><td class='left'>
- pre: <span class='texttt'>&lt;</span> is defined for values of <span class='texttt'>T</span>. <span class='texttt'>&lt;</span> is a total ordering relationship.    </td><td class='left'>
+ <i>Requires:</i> <span class='texttt'>&lt;</span> is defined for values of <span class='texttt'>T</span>. <span class='texttt'>&lt;</span> is a total ordering relationship.    </td><td class='left'>
  linear                     </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a &gt; b</span>                   </td><td class='left'>
  convertible to <span class='texttt'>bool</span>    </td><td class='left'>
  <span class='texttt'>b &lt; a</span>                  </td><td class='left'>
@@ -384,11 +384,11 @@ non-const rvalue of type <span class='texttt'>X</span>, and <span class='texttt'
 <span class='texttt'>X u;</span>							</td><td class='left'>
 													</td><td class='left'>
   <i>Requires:</i> <span class='texttt'>A</span> is <span class='texttt'>DefaultConstructible</span>.<br/>
-  post: <span class='texttt'>u.empty()</span> returns <span class='texttt'>true</span>,
+  <i>Postconditions:</i> <span class='texttt'>u.empty()</span> returns <span class='texttt'>true</span>,
   <span class='texttt'>u.get_allocator() == A()</span> </td><td class='left'>
   constant												</td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(m)</span>							</td><td class='left'>
 																				</td><td class='left'>
-post: <span class='texttt'>u.empty()</span> returns <span class='texttt'>true</span>, </td><td class='left'>
+<i>Postconditions:</i> <span class='texttt'>u.empty()</span> returns <span class='texttt'>true</span>, </td><td class='left'>
 constant												</td></tr><tr ><td class='left'>
 <span class='texttt'>X u(m);</span>					</td><td class='left'>
 																				</td><td class='left'>
@@ -397,12 +397,12 @@ constant												</td></tr><tr ><td class='left'>
 <span class='texttt'>X u(t, m);</span>				</td><td class='left'>
                           </td><td class='left'>
 <i>Requires:</i> <span class='texttt'>T</span> is <span class='texttt'>CopyInsertable</span> into <span class='texttt'>X</span>.<br/>
-post: <span class='texttt'>u == t</span>, <span class='texttt'>u.get_allocator() == m</span> </td><td class='left'>
+<i>Postconditions:</i> <span class='texttt'>u == t</span>, <span class='texttt'>u.get_allocator() == m</span> </td><td class='left'>
 linear													</td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(rv)</span><br/>
 <span class='texttt'>X u(rv);</span>
            </td><td class='left'>
            </td><td class='left'>
-  post: <span class='texttt'>u</span> shall have the same elements as <span class='texttt'>rv</span> had before this
+  <i>Postconditions:</i> <span class='texttt'>u</span> shall have the same elements as <span class='texttt'>rv</span> had before this
   construction; the value of <span class='texttt'>u.get_allocator()</span> shall be the same as the
   value of <span class='texttt'>rv.get_allocator()</span> before this construction. </td><td class='left'>
   constant                            </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(rv, m)</span><br/>
@@ -410,7 +410,7 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
 												</td><td class='left'>
   <i>Requires:</i> <span class='texttt'>T</span> is
   <span class='texttt'>MoveInsertable</span> into <span class='texttt'>X</span>.<br/>
-  post: <span class='texttt'>u</span> shall have the same elements,
+  <i>Postconditions:</i> <span class='texttt'>u</span> shall have the same elements,
   or copies of the elements, that <span class='texttt'>rv</span> had before
   this construction, <span class='texttt'>u.get_allocator() == m</span>												</td><td class='left'>
   constant if <span class='texttt'>m ==</span> <span class='texttt'>rv.get_allocator()</span>, otherwise linear	</td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a = t</span>             </td><td class='left'>
@@ -418,7 +418,7 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
   <i>Requires:</i> <span class='texttt'>T</span> is
   <span class='texttt'>CopyInsertable</span> into <span class='texttt'>X</span>
   and <span class='texttt'>CopyAssignable</span>.<br/>
-  post: <span class='texttt'>a == t</span>    </td><td class='left'>
+  <i>Postconditions:</i> <span class='texttt'>a == t</span>    </td><td class='left'>
   linear                  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a = rv</span>          </td><td class='left'>
   <span class='texttt'>X&amp;</span>           </td><td class='left'>
   <i>Requires:</i> If <span class='texttt'>allocator_-</span><br/>
@@ -429,7 +429,7 @@ linear													</td></tr><tr class='rowsep'><td class='left'> <span class='t
   <span class='texttt'>MoveInsertable</span> into <span class='texttt'>X</span> and
   <span class='texttt'>MoveAssignable</span>. All existing elements of <span class='texttt'>a</span>
   are either move assigned to or destroyed.<br/>
-  post: <span class='texttt'>a</span> shall be equal to the value that <span class='texttt'>rv</span> had before
+  <i>Postconditions:</i> <span class='texttt'>a</span> shall be equal to the value that <span class='texttt'>rv</span> had before
   this assignment.      </td><td class='left'>
   linear                </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.swap(b)</span>       </td><td class='left'>
   <span class='texttt'>void</span>          </td><td class='left'>
