--- a/unord.req.html
+++ b/unord.req.html
@@ -88,7 +88,8 @@ are sometimes required to be <span class='texttt'>CopyAssignable</span> even tho
 <span class='texttt'>eq</span> denotes a possibly const value of type <span class='texttt'>key_equal</span>,
 <span class='texttt'>n</span> denotes a value of type <span class='texttt'>size_type</span>,
 <span class='texttt'>z</span> denotes a value of type <span class='texttt'>float</span>,
-and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span class='texttt'>X::node_type</span>.</p><div class='numberedTable' id='tab:HashRequirements'>Table <a href='#tab:HashRequirements'>91</a> — Unordered associative container requirements (in addition to container)<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Expression</b></td><td colspan='1' class='center'><b>Return type</b></td><td colspan='1' class='center'><b>Assertion/note pre-/post-condition</b></td><td colspan='1' class='center'><b>Complexity</b></td></tr><tr class='capsep'><td class='left'> 
+and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span class='texttt'>X::node_type</span>.</p><div class='numberedTable' id='tab:HashRequirements'>Table <a href='#tab:HashRequirements'>91</a> — Unordered associative container requirements (in addition to container)<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Expression</b></td><td colspan='1' class='center'><b>Return type</b></td><td colspan='1' class='center'><b>Assertion/note</b></td><td colspan='1' class='center'><b>Complexity</b></td></tr><tr ><td class='left'>
+                  </td><td class='left'>                      </td><td colspan='1' class='center'><b>pre-/post-condition</b></td><td class='left'> </td></tr><tr class='capsep'><td class='left'> 
 
 <span class='texttt'>X::key_type</span>   </td><td class='left'>
 <span class='indexparent'><a class='index' id='unordered_associative_containers,key_type'></a></span><span class='indexparent'><a class='index' id='key_type,unordered_associative_containers'></a></span>  <span class='texttt'>Key</span>         </td><td class='left'>
@@ -319,7 +320,7 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
 <span class='texttt'>a.insert(i, j)</span>
 </td><td class='left'>   <span class='texttt'>void</span>
 </td><td class='left'>   <i>Requires:</i> <span class='texttt'>value_type</span> shall be <span class='texttt'>EmplaceConstructible</span> into <span class='texttt'>X</span> from <span class='texttt'>*i</span>.<br/>
-    Pre: <span class='texttt'>i</span> and <span class='texttt'>j</span> are not iterators in <span class='texttt'>a</span>.
+    <i>Requires:</i> <span class='texttt'>i</span> and <span class='texttt'>j</span> are not iterators in <span class='texttt'>a</span>.
     Equivalent to <span class='texttt'>a.insert(t)</span> for each element in <span class='texttt'>[i,j)</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,insert'></a></span>    <span class='indexparent'><a class='index' id='insert,unordered_associative_containers'></a></span></td><td class='left'>   Average case <span class='math'>Ο(<span class='math'><span class='mathalpha'>N</span></span>)</span>, where <span class='math'><span class='mathalpha'>N</span></span> is <span class='texttt'>distance(i, j)</span>.  Worst
     case <span class='math'><span class='math'>Ο(<span class='math'><span class='mathalpha'>N</span>(<span class='texttt'>a.size()</span> + 1)</span>)</span></span>.
 </td></tr><tr class='rowsep'><td class='left'> 
@@ -331,12 +332,12 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
 <span class='texttt'>a_uniq.</span><br/>
  <span class='texttt'>insert(nh)</span>           </td><td class='left'>
  <span class='texttt'>insert_return_type</span>   </td><td class='left'>
- Pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a_uniq.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect. Otherwise, inserts the
  element owned by <span class='texttt'>nh</span> if and only if there is no element in the
  container with a key equivalent to <span class='texttt'>nh.key()</span>.<br/>
- post: If <span class='texttt'>nh</span> is empty, <span class='texttt'>inserted</span> is <span class='texttt'>false</span>,
+ <i>Postconditions:</i> If <span class='texttt'>nh</span> is empty, <span class='texttt'>inserted</span> is <span class='texttt'>false</span>,
  <span class='texttt'>position</span> is <span class='texttt'>end()</span>, and <span class='texttt'>node</span> is empty.
  Otherwise if the insertion took place, <span class='texttt'>inserted</span> is <span class='texttt'>true</span>,
  <span class='texttt'>position</span> points to the inserted element, and <span class='texttt'>node</span> is empty;
@@ -347,16 +348,16 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
 <span class='texttt'>a_eq.</span><br/>
  <span class='texttt'>insert(nh)</span>           </td><td class='left'>
  <span class='texttt'>iterator</span>   </td><td class='left'>
- Pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a_eq.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect and returns <span class='texttt'>a_eq.end()</span>.
  Otherwise, inserts the element owned by <span class='texttt'>nh</span> and returns an iterator
  pointing to the newly inserted element.<br/>
- Post: <span class='texttt'>nh</span> is empty. </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>nh</span> is empty. </td><td class='left'>
  Average case <span class='math'>Ο(<span class='math'>1</span>)</span>, worst case <span class='math'>Ο(<span class='math'><span class='texttt'>a_eq.size()</span></span>)</span>.  </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.insert(q, nh)</span>           </td><td class='left'>
  <span class='texttt'>iterator</span>   </td><td class='left'>
- Pre: <span class='texttt'>nh</span> is empty or
+ <i>Requires:</i> <span class='texttt'>nh</span> is empty or
  <span class='texttt'>a.get_allocator() == nh.get_allocator()</span>.<br/>
  <i>Effects:</i> If <span class='texttt'>nh</span> is empty, has no effect and returns <span class='texttt'>a.end()</span>.
  Otherwise, inserts the element owned by <span class='texttt'>nh</span> if and only if there
@@ -366,7 +367,7 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
  with key equivalent to <span class='texttt'>nh.key()</span>. The iterator <span class='texttt'>q</span> is a hint
  pointing to where the search should start. Implementations are permitted
  to ignore the hint.<br/>
- Post: <span class='texttt'>nh</span> is empty if insertion succeeds, unchanged if insertion fails.  </td><td class='left'>
+ <i>Postconditions:</i> <span class='texttt'>nh</span> is empty if insertion succeeds, unchanged if insertion fails.  </td><td class='left'>
  Average case <span class='math'>Ο(<span class='math'>1</span>)</span>, worst case <span class='math'>Ο(<span class='math'><span class='texttt'>a.size()</span></span>)</span>.  </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.extract(k)</span>              </td><td class='left'>
  <span class='texttt'>node_type</span>             </td><td class='left'>
@@ -381,13 +382,13 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
  Average case <span class='math'>Ο(<span class='math'>1</span>)</span>, worst case <span class='math'>Ο(<span class='math'><span class='texttt'>a.size()</span></span>)</span>.  </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.merge(a2)</span>              </td><td class='left'>
  <span class='texttt'>void</span>             </td><td class='left'>
- Pre: <span class='texttt'>a.get_allocator() == a2.get_allocator()</span>.<br/>
+ <i>Requires:</i> <span class='texttt'>a.get_allocator() == a2.get_allocator()</span>.<br/>
  Attempts to extract each element in <span class='texttt'>a2</span> and insert it into <span class='texttt'>a</span>
  using the hash function and key equality predicate of <span class='texttt'>a</span>.
  In containers with unique keys, if there is an element in <span class='texttt'>a</span> with
  key equivalent to the key of an element from <span class='texttt'>a2</span>, then that
  element is not extracted from <span class='texttt'>a2</span>.<span class='par'></span>
- Post: Pointers and references to the transferred elements of <span class='texttt'>a2</span>
+ <i>Postconditions:</i> Pointers and references to the transferred elements of <span class='texttt'>a2</span>
  refer to those same elements but as members of <span class='texttt'>a</span>. Iterators referring
  to the transferred elements and all iterators referring to <span class='texttt'>a</span> will
  be invalidated, but iterators to elements remaining in <span class='texttt'>a2</span> will
@@ -424,7 +425,7 @@ the number of elements erased.
 <span class='texttt'>a.clear()</span>
 </td><td class='left'> <span class='texttt'>void</span>
 </td><td class='left'> Erases all elements in the container.
-   Post: <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>    <span class='indexparent'><a class='index' id='unordered_associative_containers,clear'></a></span>    <span class='indexparent'><a class='index' id='clear,unordered_associative_containers'></a></span></td><td class='left'> Linear in <span class='texttt'>a.size()</span>.
+   <i>Postconditions:</i> <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>    <span class='indexparent'><a class='index' id='unordered_associative_containers,clear'></a></span>    <span class='indexparent'><a class='index' id='clear,unordered_associative_containers'></a></span></td><td class='left'> Linear in <span class='texttt'>a.size()</span>.
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.find(k)</span>
 </td><td class='left'>   <span class='texttt'>iterator</span>; <br/> <span class='texttt'>const_iterator</span> for const <span class='texttt'>b</span>.
@@ -455,20 +456,20 @@ the number of elements erased.
 <span class='texttt'>b.bucket(k)</span>
 </td><td class='left'> <span class='texttt'>size_type</span>
 </td><td class='left'>
-  Pre: <span class='texttt'>b.bucket_count() &gt; 0</span>.<br/>
+  <i>Requires:</i> <span class='texttt'>b.bucket_count() &gt; 0</span>.<br/>
     Returns the index of the bucket in which elements with keys equivalent
     to <span class='texttt'>k</span> would be found, if any such element existed.
-    Post: the return value shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,bucket'></a></span>    <span class='indexparent'><a class='index' id='bucket,unordered_associative_containers'></a></span></td><td class='left'> Constant
+    <i>Postconditions:</i> the return value shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,bucket'></a></span>    <span class='indexparent'><a class='index' id='bucket,unordered_associative_containers'></a></span></td><td class='left'> Constant
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.bucket_size(n)</span>
 </td><td class='left'>   <span class='texttt'>size_type</span>
-</td><td class='left'>   Pre: <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
     Returns the number of elements in the <span class='math'><span class='texttt'>n</span><sup ><span class='textrm'> th</span></sup></span> bucket.    <span class='indexparent'><a class='index' id='unordered_associative_containers,bucket_size'></a></span>    <span class='indexparent'><a class='index' id='bucket_size,unordered_associative_containers'></a></span></td><td class='left'>   <span class='math'>Ο(<span class='math'><span class='texttt'>b.bucket_</span><span class='texttt'>size(n)</span></span>)</span>
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.begin(n)</span>
 </td><td class='left'>   <span class='texttt'>local_iterator</span>; <br/>
     <span class='texttt'>const_local_iterator</span> for const <span class='texttt'>b</span>.
-</td><td class='left'>   Pre: <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
     <span class='texttt'>b.begin(n)</span> returns an iterator referring to the
     first element in the bucket. If the bucket is empty, then
     <span class='texttt'>b.begin(n) == b.end(n)</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,begin'></a></span>    <span class='indexparent'><a class='index' id='begin,unordered_associative_containers'></a></span></td><td class='left'>   Constant
@@ -476,19 +477,19 @@ the number of elements erased.
 <span class='texttt'>b.end(n)</span>
 </td><td class='left'>   <span class='texttt'>local_iterator</span>; <br/>
     <span class='texttt'>const_local_iterator</span> for const <span class='texttt'>b</span>.
-</td><td class='left'>   Pre: <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
     <span class='texttt'>b.end(n)</span> returns an iterator which is the past-the-end
     value for the bucket.    <span class='indexparent'><a class='index' id='unordered_associative_containers,end'></a></span>    <span class='indexparent'><a class='index' id='end,unordered_associative_containers'></a></span></td><td class='left'>   Constant
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.cbegin(n)</span>
 </td><td class='left'>   <span class='texttt'>const_local_iterator</span>
-</td><td class='left'>   Pre: <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.
     Note: <span class='texttt'>[b.cbegin(n), b.cend(n))</span> is a valid range containing
     all of the elements in the <span class='math'><span class='texttt'>n</span><sup ><span class='textrm'> th</span></sup></span> bucket.    <span class='indexparent'><a class='index' id='unordered_associative_containers,cbegin'></a></span>    <span class='indexparent'><a class='index' id='cbegin,unordered_associative_containers'></a></span></td><td class='left'>   Constant
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.cend(n)</span>
 </td><td class='left'>   <span class='texttt'>const_local_iterator</span>
-</td><td class='left'>   Pre: <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,cend'></a></span>    <span class='indexparent'><a class='index' id='cend,unordered_associative_containers'></a></span></td><td class='left'>   Constant
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>n</span> shall be in the range <span class='texttt'>[0, b.bucket_count())</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,cend'></a></span>    <span class='indexparent'><a class='index' id='cend,unordered_associative_containers'></a></span></td><td class='left'>   Constant
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>b.load_factor()</span>
 </td><td class='left'>   <span class='texttt'>float</span>
@@ -503,12 +504,12 @@ the number of elements erased.
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.max_load_factor(z)</span>
 </td><td class='left'>   <span class='texttt'>void</span>
-</td><td class='left'>   Pre: <span class='texttt'>z</span> shall be positive.
+</td><td class='left'>   <i>Requires:</i> <span class='texttt'>z</span> shall be positive.
     May change the container's maximum load factor, using <span class='texttt'>z</span> as a hint.</td><td class='left'> Constant
 </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.rehash(n)</span>
 </td><td class='left'> <span class='texttt'>void</span>
-</td><td class='left'> Post: <span class='texttt'>a.bucket_count() &gt;= a.size() / a.max_load_factor()</span> and
+</td><td class='left'> <i>Postconditions:</i> <span class='texttt'>a.bucket_count() &gt;= a.size() / a.max_load_factor()</span> and
         <span class='texttt'>a.bucket_count() &gt;= n</span>.    <span class='indexparent'><a class='index' id='unordered_associative_containers,rehash'></a></span>    <span class='indexparent'><a class='index' id='rehash,unordered_associative_containers'></a></span></td><td class='left'> Average case linear in <span class='texttt'>a.size()</span>, worst case quadratic.
 </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.reserve(n)</span>  </td><td class='left'>
   <span class='texttt'>void</span>        </td><td class='left'>
