--- a/tuple.special.html
+++ b/tuple.special.html
@@ -2,7 +2,7 @@
 template &lt;class... Types&gt;
   void swap(tuple&lt;Types...&gt;&amp; x, tuple&lt;Types...&gt;&amp; y) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall not participate in overload resolution
-unless <span class='texttt'>is_swappable_v&lt;T<span class='math'><sub ><span class='mathalpha'>i</span></sub></span>&gt;</span> is <span class='texttt'>true</span>
+unless <span class='texttt'>is_swappable_v&lt;<span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>&gt;</span> is <span class='texttt'>true</span>
 for all <span class='math'><span class='mathalpha'>i</span></span>, where <span class='math'>0 ≤ <span class='mathalpha'>i</span> &lt; <span class='text'><span class='texttt'>sizeof...(Types)</span></span></span>.
 The expression inside <span class='texttt'>noexcept</span> is equivalent to:</p><pre class='codeblock'>
 noexcept(x.swap(y))
