--- a/variant.specalg.html
+++ b/variant.specalg.html
@@ -2,7 +2,7 @@
 template &lt;class... Types&gt;
   void swap(variant&lt;Types...&gt;&amp; v, variant&lt;Types...&gt;&amp; w) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to <span class='texttt'>v.swap(w)</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall not participate in overload resolution
-unless <span class='texttt'>is_move_constructible_v&lt;T<span class='math'><sub ><span class='mathalpha'>i</span></sub></span>&gt; &amp;&amp; is_swappable_v&lt;T<span class='math'><sub ><span class='mathalpha'>i</span></sub></span>&gt;</span>
+unless <span class='texttt'>is_move_constructible_v&lt;<span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>&gt; &amp;&amp; is_swappable_v&lt;<span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>&gt;</span>
 is <span class='texttt'>true</span> for all <span class='math'><span class='mathalpha'>i</span></span>.
 The expression inside <span class='texttt'>noexcept</span> is equivalent to <span class='texttt'>noexcept(v.swap(w))</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='bad_variant_access'></a></span></p></div></div></body></html>
