--- a/dcl.decl.html
+++ b/dcl.decl.html
@@ -1628,11 +1628,11 @@ In either case, <span class='texttt'>get&lt;i&gt;</span> is interpreted as a <i 
 Ordinary unqualified lookup (<a href='basic.lookup.unqual'>[basic.lookup.unqual]</a>) is not performed.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 In either case, <span class='texttt'>e</span> is an lvalue if the type of the entity <span class='texttt'>e</span>
-is an lvalue reference and an xvalue otherwise. Given the type <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>
+is an lvalue reference and an xvalue otherwise. Given the type <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>
 designated by <span class='texttt'>std::tuple_element&lt;i, E&gt;::type</span>, each <span class='texttt'>v</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>
-is a variable of type “reference to <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>” initialized with the
+is a variable of type “reference to <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>” initialized with the
 initializer, where the reference is an lvalue reference if the initializer is
-an lvalue and an rvalue reference otherwise; the referenced type is <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>.</p></div><div class='para' id='dcl.decomp-4'><div class='marginalizedparent'><a class='marginalized' href='#dcl.decomp-4'>4</a></div><p >Otherwise, all of <span class='texttt'>E</span>'s non-static data members shall be public direct
+an lvalue and an rvalue reference otherwise; the referenced type is <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>.</p></div><div class='para' id='dcl.decomp-4'><div class='marginalizedparent'><a class='marginalized' href='#dcl.decomp-4'>4</a></div><p >Otherwise, all of <span class='texttt'>E</span>'s non-static data members shall be public direct
 members of <span class='texttt'>E</span> or of the same unambiguous public base class of <span class='texttt'>E</span>,
 <span class='texttt'>E</span> shall not have an anonymous union member, and the number of elements
 in the <i ><a href='cpp#nt:identifier-list'>identifier-list</a></i> shall be equal to the number of non-static
@@ -1642,8 +1642,8 @@ Designating the non-static data members of <span class='texttt'>E</span> as
 (in declaration order),
 each <span class='texttt'>v</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span> is the
 name of an lvalue that refers to the member <span class='texttt'>m</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span> of <span class='texttt'>e</span> and
-whose type is <i>cv</i> <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>, where <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span> is the declared type of
-that member; the referenced type is <i>cv</i> <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>. The lvalue is a
+whose type is <i>cv</i> <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>, where <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span> is the declared type of
+that member; the referenced type is <i>cv</i> <span class='math'><span class='texttt'>T</span><sub ><span class='mathalpha'>i</span></sub></span>. The lvalue is a
 bit-field if that member is a bit-field.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
