--- a/utility.html
+++ b/utility.html
@@ -42,7 +42,7 @@ namespace std {
   <span class='comment'>// <a href='declval'>[declval]</a>, declval
 </span>  template &lt;class T&gt;
     add_rvalue_reference_t&lt;T&gt; declval() noexcept;  <span class='comment'>// as unevaluated operand
-</span><span class='indexparent'><a class='index' id='index_sequence'></a></span><span class='indexparent'><a class='index' id='make_index_sequence'></a></span><span class='indexparent'><a class='index' id='index_sequence_for'></a></span>%
+</span><span class='indexparent'><a class='index' id='index_sequence'></a></span><span class='indexparent'><a class='index' id='make_index_sequence'></a></span><span class='indexparent'><a class='index' id='index_sequence_for'></a></span>
   <span class='comment'>// <a href='intseq'>[intseq]</a>, Compile-time integer sequences
 </span>  template&lt;class T, T...&gt;
     struct integer_sequence;
